--- a/View/Windows/MainWindow.xaml
+++ b/View/Windows/MainWindow.xaml
@@ -33,11 +33,12 @@
             <StackPanel Grid.Row="1" VerticalAlignment="Center">
 
                 <Button  Style="{StaticResource MenuButton}" Content="Клиенты" Name="BtnClients" Click="BtnClients_Click"/>
-                <Button  Style="{StaticResource MenuButton}" Content="Услуги" Name="BtnServices"/>
+                <Button  Style="{StaticResource MenuButton}" Content="Услуги" Name="BtnServices" Click="BtnServices_Click"/>
                 <Button  Style="{StaticResource MenuButton}" Content="Статистика" Name="BtnStatistics"/>
             </StackPanel>
 
-            <Button Grid.Row="2"  Style="{StaticResource MenuButton}" Content="Выход" VerticalAlignment="Bottom" Name="BtnBack" Click="BtnBack_Click"/>
+            <Button Grid.Row="2"  Style="{StaticResource MenuButton}" Content="Назад" VerticalAlignment="Center" Name="BtnBack" Click="BtnBack_Click"/>
+            <Button Grid.Row="2"  Style="{StaticResource MenuButton}" Content="Выход" VerticalAlignment="Bottom" Name="BtnExit" Click="BtnExit_Click"/>
 
         </Grid>
         <Grid Grid.Column="1">
