--- a/App.xaml
+++ b/App.xaml
@@ -69,6 +69,7 @@
             <Setter Property="Background" Value="{StaticResource AccentColor}"/>
             <Setter Property="Height" Value="30"/>
             <Setter Property="Margin" Value="5"/>
+            <Setter Property="Padding" Value="10, 0" />
             <Setter Property="HorizontalAlignment" Value="Stretch"/>
             <Setter Property="VerticalAlignment" Value="Center"/>
             <Setter Property="FontSize" Value="16px"/>
@@ -83,6 +84,10 @@
         <Style TargetType="Image" x:Key="icon">
             <Setter Property="Margin" Value="27 27 0 27"></Setter>
             <Setter Property="HorizontalAlignment" Value="Center"></Setter>
+        </Style>
+        <Style TargetType="Image" x:Key="Avatar">
+            <Setter Property="Width" Value="48"></Setter>
+            <Setter Property="MaxWidth" Value="48"></Setter>
         </Style>
         <Style TargetType="TextBox">
             <Setter Property="Margin" Value="5"></Setter>
