--- a/View/Pages/ClientInfoPage.xaml
+++ b/View/Pages/ClientInfoPage.xaml
@@ -2,29 +2,32 @@
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:chartingToolkit="clr-namespace:System.Windows.Controls.DataVisualization.Charting;assembly=DotNetProjects.DataVisualization.Toolkit"
       xmlns:local="clr-namespace:CRMTelmate.View.Pages"
-      mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="Клиент" Background="{StaticResource GrayscalePrimary}">
-
-    <Grid>
+      mc:Ignorable="d" d:DesignWidth="800"
+      Title="Клиент" Background="{StaticResource GrayscalePrimary}" Height="650">
+    <Grid Margin="10, 0, 10, 10" >
         <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
+            <ColumnDefinition />
+            <ColumnDefinition />
         </Grid.ColumnDefinitions>
-        
-            <!--первая колонка список услуг у клиента-->
+
+        <Grid.RowDefinitions>
+            <RowDefinition />
+            <RowDefinition />
+        </Grid.RowDefinitions>
+
+        <!--список услуг у клиента-->
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
-                <RowDefinition Height="9*"/>
+                <RowDefinition Height="4*"/>
             </Grid.RowDefinitions>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch">
                 <TextBlock Style="{StaticResource H2}" Text="Услуги клиента"/>
-                <ComboBox HorizontalAlignment="Stretch" HorizontalContentAlignment="Stretch" MinWidth="70">
-                </ComboBox>
+                <!--TODO добавление новой услуги-->
+                <ComboBox HorizontalAlignment="Stretch" HorizontalContentAlignment="Stretch" MinWidth="70" />
             </StackPanel>
             <!--сам список услуг в листвью. я его не вижу тк не подключена бд если некрасиво - потом исправлю-->
             <ListView Grid.Row="2" Name="LViewClient"
@@ -64,13 +67,9 @@
                 </ListView.ItemTemplate>
             </ListView>
         </Grid>
-        
-        
-        
-        <!--страшная вторая колонка со статистикой делать пока не буду-->
-            
-            <!--третья колонка, инфа о клиенте
-        не указывала здесь названия текстбоксам, мне кажется если вы будете писать логику вам легче будет все самим тут назвать-->
+
+
+        <!--инфа о клиенте-->
         <StackPanel Grid.Column="2" HorizontalAlignment="Stretch" VerticalAlignment="Center">
             <TextBlock Style="{StaticResource H2}" Text="Клиент"/>
             <StackPanel Style="{StaticResource ClientInfo}">
@@ -111,8 +110,19 @@
                         Content="Сохранить"
                         Name="BtnSave" 
                         Click="BtnSave_Click"/>
-
         </StackPanel>
 
+        <!--статистика трат-->
+        <Grid Grid.Row="2" Grid.ColumnSpan="2">
+            <chartingToolkit:Chart BorderThickness="0" Title="Статистика трат за последние 6 месяцев" Name="CostStats" Margin="10">
+                <chartingToolkit:Chart.Series>
+                    <chartingToolkit:AreaSeries
+                        Title="Траты по месяцам" 
+                        IndependentValuePath="Key"
+                        DependentValuePath="Value"
+                    />
+                </chartingToolkit:Chart.Series>
+            </chartingToolkit:Chart>
+        </Grid>
     </Grid>
 </Page>
