--- a/App.xaml
+++ b/App.xaml
@@ -11,15 +11,10 @@
         <SolidColorBrush x:Key="AccentLighterColor" Color="#FF5E2D"/>
         <SolidColorBrush x:Key="PrimaryLighterColor" Color="#9466FF"/>
 
+
         <SolidColorBrush x:Key="GrayscaleSecondary" Color="#F4F4F5"/>
         <SolidColorBrush x:Key="GrayscalePrimary" Color="white"/>
         <SolidColorBrush x:Key="GrayscaleAccent" Color="#D3D4DB"/>
-
-        <!--пыталась подключить фонт по какойто причине вс на это все равно
-        если вы сможете это починить то супер, если нет - уберем-->
-        <Style x:Key="RostelecomBasis">
-            <Setter Property="TextElement.FontFamily" Value="/CRMTelmate;component/Fonts/RostelecomBasis-Bold.otf"/>
-        </Style>
 
         <!--общий стиль
         
@@ -31,6 +26,7 @@
             <Setter Property="TextAlignment" Value="Center"/>
             <Setter Property="VerticalAlignment" Value="Center"/>
             <Setter Property="TextWrapping" Value="Wrap"/>
+            <Setter Property="FontFamily" Value="Rostelecom Basis Medium"></Setter>
             <Setter Property="FontSize" Value="28"/>
         </Style>
 
@@ -40,7 +36,9 @@
             <Setter Property="TextAlignment" Value="Center"/>
             <Setter Property="VerticalAlignment" Value="Center"/>
             <Setter Property="TextWrapping" Value="Wrap"/>
+            <Setter Property="FontFamily" Value="Rostelecom Basis Medium"></Setter>
             <Setter Property="FontSize" Value="22"/>
+
         </Style>
 
         <Style TargetType="TextBlock" x:Key="H3">
@@ -49,6 +47,7 @@
             <Setter Property="TextAlignment" Value="Center"/>
             <Setter Property="VerticalAlignment" Value="Center"/>
             <Setter Property="TextWrapping" Value="Wrap"/>
+            <Setter Property="FontFamily" Value="Rostelecom Basis"></Setter>
             <Setter Property="FontSize" Value="16"/>
         </Style>
 
@@ -58,6 +57,14 @@
             <Setter Property="TextAlignment" Value="Center"/>
             <Setter Property="VerticalAlignment" Value="Center"/>
             <Setter Property="TextWrapping" Value="Wrap"/>
+            <Setter Property="FontFamily" Value="Rostelecom Basis"></Setter>
+            <Setter Property="FontSize" Value="12"/>
+        </Style>
+
+        <Style TargetType="TextBlock" x:Key="H5">
+            <Setter Property="Margin" Value="5"/>
+            <Setter Property="TextWrapping" Value="Wrap"/>
+            <Setter Property="FontFamily" Value="Rostelecom Basis Light"></Setter>
             <Setter Property="FontSize" Value="12"/>
         </Style>
 
@@ -71,6 +78,7 @@
             <Setter Property="VerticalAlignment" Value="Center"/>
             <Setter Property="FontSize" Value="16px"/>
             <Setter Property="BorderBrush" Value="Transparent"/>
+            <Setter Property="FontFamily" Value="Rostelecom Basis"></Setter>
             <Setter Property="Foreground" Value="{StaticResource GrayscalePrimary}"/>
         </Style>
 
@@ -91,7 +99,7 @@
             <Setter Property="HorizontalAlignment" Value="Stretch"></Setter>
             <Setter Property="VerticalAlignment" Value="Center"></Setter>
             <Setter Property="FontSize" Value="16"></Setter>
-            <Setter Property="FontFamily" Value="Comic Sans MS"></Setter>
+            <Setter Property="FontFamily" Value="Rostelecom Basis Medium"></Setter>
             <Setter Property="Height" Value="30"></Setter>
             <Setter Property="MinWidth" Value="100"></Setter>
 
@@ -115,6 +123,7 @@
             <Setter Property="VerticalAlignment" Value="Center"></Setter>
             <Setter Property="FontSize" Value="16"></Setter>
             <Setter Property="Height" Value="30"></Setter>
+            <Setter Property="FontFamily" Value="Rostelecom Basis Light"></Setter>
         </Style>
         <!--стиль для кнопок внутри левого меню-->
         <Style TargetType="Button" x:Key="MenuButton">
@@ -123,12 +132,13 @@
             <Setter Property="HorizontalAlignment" Value="Stretch"/>
             <Setter Property="VerticalAlignment" Value="Center"/>
             <Setter Property="FontSize" Value="22px"/>
+            <Setter Property="FontFamily" Value="Rostelecom Basis"></Setter>
             <Setter Property="BorderBrush" Value="{StaticResource PrimaryColor}"/>
             <Setter Property="Foreground" Value="{StaticResource GrayscalePrimary}"/>
         </Style>
 
-        
-        
+
+
         <!--стиль для вывода информации о клиенте в стак панель используется в clientinfopage-->
         <Style TargetType="StackPanel" x:Key="ClientInfo">
             <Setter Property="Orientation" Value="Horizontal"/>
@@ -149,7 +159,8 @@
             <Setter Property="FontSize" Value="12"/>
             <Setter Property="Margin" Value="5, 0"/>
             <Setter Property="HorizontalAlignment" Value="Center"/>
+            <Setter Property="FontFamily" Value="Rostelecom Basis Light"></Setter>
         </Style>
-        
+
     </Application.Resources>
 </Application>
