--- a/App.xaml
+++ b/App.xaml
@@ -124,14 +124,26 @@
             <Setter Property="BorderBrush" Value="{StaticResource PrimaryColor}"/>
             <Setter Property="Foreground" Value="{StaticResource GrayscalePrimary}"/>
         </Style>
+        <!--стиль для кнопок добавления фотграфии-->
+            <Style TargetType="Button" x:Key="ImageButton">
+            <Setter Property="Background" Value="{StaticResource PrimaryColor}"/>
+            <Setter Property="Margin" Value="5 5 5 5"/>
+            <Setter Property="HorizontalAlignment" Value="Stretch"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
+            <Setter Property="FontSize" Value="14px"/>
+            <Setter Property="BorderBrush" Value="{StaticResource PrimaryColor}"/>
+            <Setter Property="Foreground" Value="{StaticResource GrayscalePrimary}"/>
+        </Style>
 
-        
-        
+
+
         <!--стиль для вывода информации о клиенте в стак панель используется в clientinfopage-->
         <Style TargetType="StackPanel" x:Key="ClientInfo">
             <Setter Property="Orientation" Value="Horizontal"/>
             <Setter Property="HorizontalAlignment" Value="Right"/>
             <Setter Property="Margin" Value="2 5 35 2"/>
+            <Setter Property="MaxWidth" Value="300"/>
+            <Setter Property="Width" Value="200"/>
         </Style>
 
         <Style TargetType="CheckBox" x:Key="CheckBoxClientService">
