--- a/View/Pages/ServiceInfoPage.xaml
+++ b/View/Pages/ServiceInfoPage.xaml
@@ -46,7 +46,7 @@
                             <ListView.ItemTemplate>
                                 <DataTemplate>
                                     <StackPanel Orientation="Horizontal">
-                                        <Label  Style="{StaticResource LWClients}" Content="{Binding FullName}" Margin="0" />
+                                        <Label  Content="{Binding FullName}" Margin="0" />
                                     </StackPanel>
                                 </DataTemplate>
                             </ListView.ItemTemplate>
@@ -125,7 +125,7 @@
                         <Image Name="ImageService">
                         </Image>
                     </Border>
-                    <Button Style="{StaticResource ServiceButton}" Height="30" Width="200" Margin="5" Name="BtnSelectImage"  Content="Выбрать" Click="BtnSelectImage_Click"></Button>
+                    <Button Style="{StaticResource MenuButton}" Height="30" Width="200" Margin="5" Name="BtnSelectImage"  Content="Выбрать" Click="BtnSelectImage_Click"></Button>
                     <Button Style="{StaticResource ActionButton}" Height="30" Width="200" Margin="5"
                         Content="Сохранить"
                         Name="BtnSave" 
