--- a/View/Pages/AddNewClient.xaml
+++ b/View/Pages/AddNewClient.xaml
@@ -1,75 +1,60 @@
-﻿<Page x:Class="CRMTelmate.View.Pages.AddNewClient"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:CRMTelmate.View.Pages"
-      mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="Добавление нового клиента">
-    <Grid Grid.Column="1">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*" />
-            <RowDefinition Height="4*" />
-        </Grid.RowDefinitions>
+<Page x:Class="CRMTelmate.View.Pages.AddNewClient"
+xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+xmlns:local="clr-namespace:CRMTelmate.View.Pages"
+mc:Ignorable="d"
+d:DesignHeight="450" d:DesignWidth="800"
+Title="Добавление нового клиента">
+<Grid Grid.Column="1">
+<StackPanel Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Center" Width="700">
+<TextBlock Style="{StaticResource H2}" Text="Услуга"/>
+<StackPanel HorizontalAlignment="Center" Width="200">
+<StackPanel Style="{StaticResource ClientInfo}" HorizontalAlignment="Left">
+<TextBlock Style="{StaticResource H4}" Text="Имя*" Width="70"></TextBlock>
+<TextBox Width="110" Style="{StaticResource ClientInfoTB}" MaxLength="50" x:Name="TBFirstName" />
+</StackPanel>
 
-        <Grid Grid.Row="1">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition />
-                <ColumnDefinition />
-            </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition />
-                <RowDefinition />
-                <RowDefinition />
-                <RowDefinition Height="150" />
-            </Grid.RowDefinitions>
+<StackPanel Style="{StaticResource ClientInfo}" HorizontalAlignment="Left">
+<TextBlock Style="{StaticResource H4}" Text="Фамилия*" Width="70"></TextBlock>
+<TextBox Width="110" Style="{StaticResource ClientInfoTB}" MaxLength="50" x:Name="TBSurnameName" />
+</StackPanel>
 
-            <StackPanel Grid.Column="1"  Style="{StaticResource ClientInfo}">
-                <TextBlock Style="{StaticResource H4}" Text="Имя*"></TextBlock>
-                <TextBox Style="{StaticResource ClientInfoTB}" MaxLength="50" x:Name="TBFirstName" />
-            </StackPanel>
+<StackPanel Style="{StaticResource ClientInfo}" HorizontalAlignment="Left">
+<TextBlock Style="{StaticResource H4}" Text="Отчество" Width="70"></TextBlock>
+<TextBox Width="110" Style="{StaticResource ClientInfoTB}" MaxLength="50" x:Name="TBPatronumicName" />
+</StackPanel>
 
-            <StackPanel Grid.Column="1" Grid.Row="1" Style="{StaticResource ClientInfo}">
-                <TextBlock Style="{StaticResource H4}" Text="Фамилия*"></TextBlock>
-                <TextBox Style="{StaticResource ClientInfoTB}" MaxLength="50" x:Name="TBSurnameName" />
-            </StackPanel>
+<StackPanel Style="{StaticResource ClientInfo}" HorizontalAlignment="Left">
+<TextBlock Text="e-mail*" Style="{StaticResource H4}" Width="70"></TextBlock>
+<TextBox Width="110" Style="{StaticResource ClientInfoTB}" MaxLength="255" x:Name="TBEmail" />
+</StackPanel>
+<StackPanel Style="{StaticResource ClientInfo}" HorizontalAlignment="Left">
+<TextBlock Style="{StaticResource H4}" Text="Телефон*" Width="70"></TextBlock>
+<TextBox Width="110" Style="{StaticResource ClientInfoTB}" MaxLength="20" x:Name="TBPhone" />
+</StackPanel>
 
-            <StackPanel Grid.Column="1" Grid.Row="2" Style="{StaticResource ClientInfo}">
-                <TextBlock Style="{StaticResource H4}" Text="Отчество"></TextBlock>
-                <TextBox Style="{StaticResource ClientInfoTB}" MaxLength="50" x:Name="TBPatronumicName" />
-            </StackPanel>
-            <StackPanel Grid.Row="3" HorizontalAlignment="Center" VerticalAlignment="Center">
-                <Border Margin="5" Height="98" Width="150" BorderThickness="1" BorderBrush="#9466FF">
-                    <Image Name="ImageService">
-                    </Image>
-                </Border>
-                <Button Style="{StaticResource MenuButton}" Height="30" Width="200" Margin="5" Name="BtnSelectImage"  Content="Выбрать" Click="BtnSelectImage_Click"></Button>
+<StackPanel Width="200" Orientation="Vertical" HorizontalAlignment="Center">
+<TextBlock TextWrapping="WrapWithOverflow" Text="Дата регистрации*" MaxWidth="86" Style="{StaticResource H4}"></TextBlock>
+<DatePicker x:Name="DPRegistrationDate" Width="150" Height="24" />
+</StackPanel>
+</StackPanel>
+<StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
+<StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+<Border Margin="5" Height="200" Width="200" BorderThickness="1" BorderBrush="#9466FF">
+<Image Name="ImageService">
+</Image>
+</Border>
+<Button Style="{StaticResource ActionButton}" Height="25" Width="auto" Margin="2" Name="BtnSelectImage" Content="Выбрать изображение" Click="BtnSelectImage_Click"></Button>
+<Button Style="{StaticResource MenuButton}" Height="30" Width="auto" Margin="5"
+Content="Сохранить"
+Name="BtnSave"
+Click="BtnSave_Click"/>
+</StackPanel>
+</StackPanel>
 
-            </StackPanel>
+</StackPanel>
 
-            <StackPanel Grid.Column="1" Grid.Row="3" Style="{StaticResource ClientInfo}" VerticalAlignment="Center" Margin="10,5,0,20">
-                <TextBlock Text="e-mail*" Style="{StaticResource H4}"></TextBlock>
-                <TextBox Style="{StaticResource ClientInfoTB}" MaxLength="255" x:Name="TBEmail" />
-            </StackPanel>
-
-            <StackPanel Grid.Row="3" Grid.Column="1" Style="{StaticResource ClientInfo}" VerticalAlignment="Center" Margin="0,-70,0,0">
-                <TextBlock TextWrapping="WrapWithOverflow" Text="Дата регистрации*" TextAlignment="Right" MaxWidth="86" Style="{StaticResource H4}"></TextBlock>
-                <DatePicker x:Name="DPRegistrationDate" Width="90" Height="24" />
-            </StackPanel>
-
-            <StackPanel Grid.Column="1" Grid.Row="3" Style="{StaticResource ClientInfo}" VerticalAlignment="Top">
-                <TextBlock Style="{StaticResource H4}" Text="Телефон*"></TextBlock>
-                <TextBox Style="{StaticResource ClientInfoTB}" MaxLength="20" x:Name="TBPhone" />
-            </StackPanel>
-
-            <Button Grid.Row="4" Grid.Column="1" Style="{StaticResource ActionButton}" Height="30" Margin="0,5"
-                    Content="Сохранить"
-                    Name="BtnSave" 
-                    VerticalAlignment="Bottom"
-                    Click="BtnSave_Click"
-                />
-        </Grid>
-
-    </Grid>
+</Grid>
 </Page>
